assets/css/shared.css
/* ... */
  main > .header[style] > * {
    position: relative;
    z-index: 1;
  }
  main > .header[style] h1 span {
    color: white !important;
  }

  main > .header + .standard {
    margin-top: 1.5em;
  }
  @media (min-width: 70em) {
    main > .header + .standard {
      margin-top: 4em;
    }
  }

  /* OPTIONAL: Limit the width of the headlines for aesthetic reasons. */
  main > .header h1 {
    max-width: 12em;
  }
  main > .header h2 {
    max-width: 20.5em;
  }

  /* SHIM: Prevent the headline from colliding with the site navigation */
  @media (min-width: 30em) and (max-width: 90em) {
    main > .header {
      padding-right: 10em;
    }
  }
  @media (min-width: 30em) and (max-width: 70em) {
    main > .header {
      padding-right: 8em;
    }
  }

  /* OPTIONAL: Make the navigation a little smaller on tiny screens that don’t understand @supports */
  @media (max-width: 30em) {
    main > .header {
      padding-right: 5em;
    }
  }
  @media (max-width: 50em) {
    header + main h1:first-child,
    header + h1 + main h1:first-child,
    header + h3 + main h1:first-child {
      margin-top: 2.25em;
      margin-right: 2em;
    }
  }

  .scripted-nav header > .nav {
    font-size: inherit;
  }
  .scripted-nav main > .header {
    padding-right: 1.5em;
  }
  @media (min-width: 70em) {
    .scripted-nav main > .header {
      padding-right: 4em;
    }
  }
  .scripted-nav main > .header {
    padding-right: 1.5em;
  }
  .scripted-nav header + main h1:first-child,
  .scripted-nav header + h1 + main h1:first-child,
  .scripted-nav header + h3 + main h1:first-child {
    margin-top: 0;
    margin-right: 0;
  }
  .scripted-nav > nav p {
    margin-right: 0;
  }



  /* =Footer
  -----------------------------------------------
  -----------------------------------------------
  ----------------------------------------------- */
  footer {
    font-family: "Proxima Nova W08", "Helvetica Neue", Helvetica, sans-serif; /* @proxima-nova */
    background-color: rgb(26, 36, 38); /* @thorium */
    color: rgb(192, 204, 207); /* @silver */
    position: relative;
  }

  footer ul,
  footer li {
    /* @reset-list */
    list-style: none;
    margin-left: 0;
    padding-left: 0;
  }

  footer li a {
    text-decoration: none;
    font-style: normal;
  }

  /* Links */
  footer a,
  .tangerine footer a,
  .orange    footer a,
  .purple    footer a,
  .blue      footer a,
  .teal      footer a,
  .green     footer a,
  .yellow    footer a,
  .red       footer a {
    color: inherit;
  }
  footer a[href]:hover,
  footer a[href]:active,
  footer a[href]:focus {
    color: white;
  }

  /* Buttons */
  footer button, 
  footer .action span, 
  footer .action a {
    background-color: rgb(55, 72, 77) !important; /* @magnesium */ /* !important to override the selected page color */
    color: white !important;
  }
  footer button:hover,
  footer button:active,
  footer button:focus, 
  footer a[href]:hover .action span,
  footer a[href]:active .action span,
  footer a[href]:focus .action span,
  footer .action a[href]:hover,
  footer .action a[href]:active,
  footer .action a[href]:focus {
    background-color: rgb(114, 126, 130) !important; /* @nickel */
    color: white !important;
  }


  /* =Social
  ----------------------------------------------- */
  .social {
    margin-top: 0.75em;
  }
  .social li {
    display: inline;
    margin-right: 0.6111111111em;
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
  }

  .social li a {
    background-color: rgb(41, 53, 56); /* @tin */
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    display: inline-block;
    padding: 0.25em;
    border-radius: 50%;
  }
  .tangerine .social li a {
    background-color: rgb(249, 132, 12); /* @orange */
  }
  .orange .social li a {
    background-color: rgb(249, 132, 12); /* @orange */
  }
  .purple .social li a {
    background-color: rgb(168, 46, 255); /* @purple */
  }
  .blue .social li a {
    background-color: rgb(0, 157, 255); /* @blue */
  }
  .teal .social li a {
    background-color: rgb(0, 207, 172); /* @dark-teal */
  }
  .green .social li a {
    background-color: rgb(48, 217, 101); /* @green */
  }
  .yellow .social li a {
    background-color: rgb(255, 214, 13); /* @yellow */
    background-color: rgb(230, 189, 0); /* @dark-yellow */
  }
  .red .social li a {
    background-color: rgb(239, 20, 93); /* @red */
  }
  footer .social li a {
    color: rgb(26, 36, 38) !important; /* @thorium */ /* Important to override colors like .tangerine and .red */
    background-color: rgb(192, 204, 207) !important; /* @silver */
  }
  footer .social li a:hover,
  footer .social li a:active,
  footer .social li a:focus {
    background-color: white !important;
    color: rgb(26, 36, 38) !important; /* @thorium */
  }


  /* =Subscribe
  ----------------------------------------------- */
  aside .subscribe,
  footer .subscribe {
    display: block;
    margin: 1.5em 0;
    text-decoration: none;
    font-style: inherit;
  }
  aside .subscribe {
    color: inherit;
    margin: 3em 0;
  }
  aside .subscribe h2,
  aside .subscribe h3,
  aside .subscribe h3,
  aside .subscribe p,
  footer .subscribe h2,
  footer .subscribe h3,
  footer .subscribe p {
    margin: 0;
  }
  aside .subscribe h2,
  aside .subscribe h3,
  footer .subscribe h2,
  footer .subscribe h3,
  footer .map > li {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
  }
  aside .subscribe h3,
  footer .subscribe h3 {
    font-weight: inherit;
    font-style: italic;
    font-family: "Freight Text W01", Georgia, serif; /* @freight-text */
  }
  aside .subscribe p,
  footer .subscribe p {
    margin-top: 0.75em;
  }
  aside .subscribe:hover .action span,
  aside .subscribe:active .action span,
  aside .subscribe:focus .action span {
    background-color: rgb(41, 53, 56); /* @tin */
  }
/* ... */

